--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>com.codeclan</groupId>
     <artifactId>LibraryPairedLab</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>ch.rhj.junit</groupId>
+            <artifactId>rhj-junit-common</artifactId>
+            <version>0.2.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
