--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,14 @@
     <artifactId>LibraryPairedLab</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
-        <dependency>
-            <groupId>ch.rhj.junit</groupId>
-            <artifactId>rhj-junit-common</artifactId>
-            <version>0.2.1</version>
-        </dependency>
-    </dependencies>
 
-    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
