--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,12 @@
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
-            <groupId>ch.rhj.junit</groupId>
-            <artifactId>rhj-junit-common</artifactId>
-            <version>0.2.1</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
-    </dependencies>
 
-    <dependencies>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
